--- a/.env.example
+++ b/.env.example
@@ -5,12 +5,12 @@ POST_SURVEY=https://cornell.ca1.qualtrics.com/jfe/form/SV_29ryQcLab7hSBrE
 POST_SURVEY_WITH_QUALTRICS= TRUE
 RESEARCHER_EMAIL=abcdefg@cornell.edu
 IDENTIFIER="SONA ID"
-NUM_DAYS=2
+NUM_DAYS=12
 SITE_NAME=eatsnap.love
-SITE_LOGO=/public/log.png
+SITE_LOGO=/public/logo.png
 SITE_FAVICON=/public/favicon.ico
-SITE_PICTURE=/public/homepage.jpg
-NUM_EXP_CONDITIONS=3
-EXP_CONDITIONS_NAMES=var1,var2,var3
+SITE_PICTURE=/public/home.jpg
+NUM_EXP_CONDITIONS=2
+EXP_CONDITIONS_NAMES=high, control
 FEED_ORDER=CHRONOLOGICAL
 CDN= https://d3li50wqjhpxmc.cloudfront.net
